# ai_prog_task1

./: README.md
geocoder/: docker-compose.yml
geocoder/backend/: Dockerfile  external_services.py  main.py  requirements.txt  settings.py
geocoder/backend/src/: settings.py
geocoder/backend/src/external_services/: __init__.py  elevation.py  geocoding.py  weather.py
geocoder/backend/src/queue/: main.py
geocoder/backend/src/web/: main.py
geocoder/frontend/: Dockerfile  package.json
geocoder/frontend/public/: index.html
geocoder/frontend/src/: index.css
geocoder/frontend/src/components/: App.tsx  Map.tsx  SearchForm.tsx
geocoder/frontend/src/hooks/: useWebSocket.ts
geocoder/frontend/src/types/: types.ts
html/: constants.js  index.html  main.js  styles.css
html/replit_tetris/static/js/: constants.js  settings.js
html/replit_tetris/templates/: index.html
replit_tetris/static/css/: styles.css
replit_tetris/static/js/: tetris.js
rust/: Cargo.toml  index.html  index_old.html
rust/pkg/: tetris.d.ts  tetris.js  tetris_bg.wasm  tetris_bg.wasm.d.ts
rust/src/: constants.rs  lib.rs
rust/www/: index.html  style.css
