[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'HtmlBodyElement',
    'Storage',
    'Event',
    'KeyboardEvent',
    'EventTarget',
] 